Changed tabs such that all are always visible
Tabs are now uniform in size and shrink if necessary instead of being hidden.

--- a/AUTHORS
+++ b/AUTHORS
@@ -62,3 +62,4 @@ Copyright (c) 2005        Gautam Iyer <gautam@math.uchicago.edu>
 Copyright (c) 2005        Mark Olesen <Mark.Olesen@gmx.net>
 Copyright (c) 2006        Yoshihiko Kashio <ykash@users.sourceforge.net>
 Copyright (c) 2006	  Frederik Deweerdt <fdeweerdt@users.sourceforge.net>
+Copyright (c) 2012	  Thomas McGrew <tjmcgrew@gmail.com>
